plugins {
    id "application"
    id "com.exactpro.th2.gradle.component" version "0.1.1"
    id 'org.jetbrains.kotlin.jvm' version '1.8.22'
    id "org.jetbrains.kotlin.kapt" version "1.8.22"
}

group 'com.exactpro.th2'
version release_version

kotlin {
    jvmToolchain(11)
}

repositories {
    mavenCentral()

    maven {
        name 'Sonatype_snapshots'
        url 'https://s01.oss.sonatype.org/content/repositories/snapshots/'
    }

    maven {
        name 'Sonatype_releases'
        url 'https://s01.oss.sonatype.org/content/repositories/releases/'
    }

    mavenLocal()

    configurations.configureEach {
        resolutionStrategy.cacheChangingModulesFor 0, 'seconds'
        resolutionStrategy.cacheDynamicVersionsFor 0, 'seconds'
    }
}

dependencies {
    implementation("com.exactpro.th2:common:5.13.1-dev") {
        exclude group: 'com.exactpro.th2', module: 'task-utils'
    }
    implementation "com.exactpro.th2:common-utils:2.2.3-dev"
    implementation 'com.exactpro.th2:netty-bytebuf-utils:0.0.1'
    implementation'com.exactpro.th2:conn-dirty-tcp-core:3.6.0-dev'
    implementation 'com.exactpro.th2:grpc-lw-data-provider:2.3.1-dev'

    implementation 'org.slf4j:slf4j-api'
    implementation 'io.github.microutils:kotlin-logging:3.0.5'
    implementation 'org.apache.commons:commons-lang3'

    implementation 'io.netty:netty-all'
    implementation 'com.google.auto.service:auto-service:1.1.1'

    implementation 'com.fasterxml.jackson.core:jackson-core'
    implementation 'com.fasterxml.jackson.core:jackson-databind'
    implementation 'com.fasterxml.jackson.module:jackson-module-kotlin'

    testImplementation 'org.mockito:mockito-core:5.12.0'
    testImplementation 'org.jetbrains.kotlin:kotlin-test-junit5:1.8.22'

    annotationProcessor 'com.google.auto.service:auto-service:1.1.1'
    kapt 'com.google.auto.service:auto-service:1.1.1'
}

test {
    useJUnitPlatform()
}

application {
    mainClass.set('com.exactpro.th2.conn.dirty.tcp.core.Main')
}

dependencyCheck {
    suppressionFile="suppressions.xml"
    //FIXME: we should check all used dependencies
    skipConfigurations = ['kapt', 'kaptClasspath_kaptKotlin', 'kaptTest', 'kaptTestFixtures', 'annotationProcessor']
}